hphp/test/zend/good/Zend/tests/bug31102.php.expectf
__autoload(Test1,1)
Caught: Test1::__construct
__autoload(Test2,2)
Caught: __autoload
__autoload(Test3,3)

Fatal error: Class undefined: Test3 in %s/bug31102.php(30)(9168acdcf36bd95b243e1029df92786d) : eval()'d code on line 1
